@@ -154,7 +154,10 @@ struct key_data {
 };
 
 struct key_data_internal {
-  uint32_t data[KEY_CONTENT_LEN/4]; /* p and q */
+  uint32_t data[KEY_CONTENT_LEN/4]; /*
+				     * Secret key data.
+				     * RSA: p and q, ECDSA: d, EdDSA: a+seed
+				     */
   uint32_t checksum[DATA_ENCRYPTION_KEY_SIZE/4];
 };
 
@@ -252,6 +255,12 @@ extern uint8_t *ecdsa_compute_public_p256r1 (const uint8_t *key_data);
 extern int ecdsa_sign_p256k1  (const uint8_t *hash, uint8_t *output,
 			       const uint8_t *key_data);
 extern uint8_t *ecdsa_compute_public_p256k1 (const uint8_t *key_data);
+
+
+extern int eddsa_sign_25519  (const uint8_t *input, size_t ilen,
+			      uint8_t *output,
+			      const uint8_t *sk_a, const uint8_t *seed,
+			      const uint8_t *pk);
 
 extern const uint8_t *gpg_do_read_simple (uint8_t);
 extern void gpg_do_write_simple (uint8_t, const uint8_t *, int);
